--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,8 +19,8 @@ jobs:
       matrix:
         include:
           - arch: mips_24kc
-            sdk_url_path: https://downloads.openwrt.org/releases/22.03.4/targets/ath79/nand/
-            sdk_name: -sdk-22.03.4-mips_24kc_
+            sdk_url_path: https://downloads.openwrt.org/releases/22.03.4/targets/ath79/generic
+            sdk_name: -sdk-22.03.4-ath79-generic_
 
     env:
       SDK_URL_PATH: ${{ matrix.sdk_url_path }}
